--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/chart.js": "^2.9.21",
     "@types/node": "^14.0.5",
     "express": "^4.17.1",
     "pug": "^3.0.0"
