--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,9 @@
 {
-    "compilerOptions": {
-        "allowJs": true,
-        "module": "CommonJS",
-        "target": "ES2020"
-    },
-    "include": [
-        "**.ts",
-        "**.*.ts"
-    ]
+  "compilerOptions": {
+    "allowJs": true,
+    "module": "CommonJS",
+    "target": "ES2020"
+  },
+  "include": ["*.ts", "./public/js/*.ts"],
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
